--- a/app/src/main/res/anim/long_press.xml
+++ b/app/src/main/res/anim/long_press.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/accelerate_interpolator">
+    android:interpolator="@android:anim/accelerate_interpolator"
+    >
 
     <alpha
         android:duration="2000"
@@ -12,5 +13,6 @@
         android:fromAlpha="1"
         android:startOffset="2000"
         android:toAlpha="0" />
+
 
 </set>
